--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31249bd1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcff98ead10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31246dcb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31246dcd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcff95dce50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcff9607090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3124c4c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3124c4c6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcff9b5d790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcff9b5d990&gt;]</pre>
 </div>
 
 </div>
