--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5888e90090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ba7350290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5888be1c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5888be1e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba6ffbb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ba6ffbd90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f58891384d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f58891386d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba75ce550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ba75ce750&gt;]</pre>
 </div>
 
 </div>
