--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d41af5bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc726f3ffd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d418139d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d41813bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc727281890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc726c77d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d420a63d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d420a65d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc727220bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7271ce6d0&gt;]</pre>
 </div>
 
 </div>
