--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf01c71dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf4798a290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf019a1bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf019a1dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf4738ed90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf476b73d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf01ef8490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf01ef8690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf47c15650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf47c681d0&gt;]</pre>
 </div>
 
 </div>
