--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3949650450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0eab7de550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3949315b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3949315d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0eab1e0d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0eab1e0f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39498d94d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39498d96d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0eaba6c650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0eaba6c890&gt;]</pre>
 </div>
 
 </div>
