--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd98d0182d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd005b27650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd98ca02c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd98ca02e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd005862bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd005862dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd98d290510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd98d290710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd005db9510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd005db9710&gt;]</pre>
 </div>
 
 </div>
