--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2963a853d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3cba6d2b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f296348ab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f296348ad10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cba38ac10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cba38ae10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2963d17490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2963d17690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cba94f450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cba94f650&gt;]</pre>
 </div>
 
 </div>
