--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f070fea1790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe740c7750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f070fba9f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f070fbb4b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe73ab8cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe73ab8ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0710181810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f071011d490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe74342590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe74342790&gt;]</pre>
 </div>
 
 </div>
