--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f10d2645650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe44e4ad1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f10d2312290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10d2376c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe44e179b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe44e179d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f10d28fb050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10d28cd5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe44e4c6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe44e73c610&gt;]</pre>
 </div>
 
 </div>
