--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f150fefb990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9474d44450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f150fbfec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f150fc11c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9474a60c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9474a60e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f151016f250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f151017b590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9474fcf5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9474fcf7d0&gt;]</pre>
 </div>
 
 </div>
