--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc46d238650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa3adaaead0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc46cf69250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc46cf72cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3ad79dd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3ad79df90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc46d52eb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc46d4c95d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3add54690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3add54890&gt;]</pre>
 </div>
 
 </div>
