--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb540835ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdfb0f89dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb54056e390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb540571d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfb0c57c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdfb0c57e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb540abd190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb540ac8650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfb121a590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdfb121a790&gt;]</pre>
 </div>
 
 </div>
