--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fedf957f050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b64a9fa90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedf8f8ec90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedf8f8ee90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b647aea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b647aec50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fedf980f550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fedf980f750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b64d15410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b64d15610&gt;]</pre>
 </div>
 
 </div>
