--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b64a9fa90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcbdbae5c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b647aea50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b647aec50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbdb4e1d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbdb4e1f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b64d15410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b64d15610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbdbd6d5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbdbd6d7d0&gt;]</pre>
 </div>
 
 </div>
