--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9673080ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94fa340790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96730e4b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96730e4d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94f9d31990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94f9d31bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9673654550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9673654750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94fa60e310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94fa5c34d0&gt;]</pre>
 </div>
 
 </div>
