--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc9d552d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00ddce1650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9d27cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc9d27ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00dd6e5f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00dd6d0c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9d7e3650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc9d7e3850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00ddfc6850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00ddf62510&gt;]</pre>
 </div>
 
 </div>
