--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f82082bcb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f537f8572d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8207f71cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8207f71ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f537f265a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f537f577dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8208544590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8208544790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f537fb1cd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f537fae7610&gt;]</pre>
 </div>
 
 </div>
